added some html structure

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <title>D&D Character Generator</title>
 </head>
 <body>
+  <div>
+    <h1>D&D Character Generator</h1>
+    <h3>by Tonytrip3</h3>
+  </div>
   
   <script src="js/app.js"></script>
 </body>
